; ModuleID = '/home/carl/AnghaBench/RetroArch/griffin/extr_..libretro-commonaudioresamplerdriverssinc_resampler.c_resampler_sinc_process_sse.c'
source_filename = "/home/carl/AnghaBench/RetroArch/griffin/extr_..libretro-commonaudioresamplerdriverssinc_resampler.c_resampler_sinc_process_sse.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.resampler_data = type { i32, float*, float*, i64, i64 }
%struct.TYPE_2__ = type { i32, i32, i32, i64, i64, float*, float*, i64, float*, i32, float }

@SINC_WINDOW_KAISER = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, %struct.resampler_data*)* @resampler_sinc_process_sse to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @resampler_sinc_process_sse(i8* %0, %struct.resampler_data* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca %struct.resampler_data*, align 8
  %5 = alloca %struct.TYPE_2__*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca float*, align 8
  %9 = alloca float*, align 8
  %10 = alloca i64, align 8
  %11 = alloca i64, align 8
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  %17 = alloca float*, align 8
  %18 = alloca float*, align 8
  %19 = alloca float*, align 8
  %20 = alloca float*, align 8
  %21 = alloca i32, align 4
  %22 = alloca i32, align 4
  %23 = alloca i32, align 4
  %24 = alloca i32, align 4
  %25 = alloca i32, align 4
  %26 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store %struct.resampler_data* %1, %struct.resampler_data** %4, align 8
  %27 = load i8*, i8** %3, align 8
  %28 = bitcast i8* %27 to %struct.TYPE_2__*
  store %struct.TYPE_2__* %28, %struct.TYPE_2__** %5, align 8
  %29 = load %struct.TYPE_2__*, %struct.TYPE_2__** %5, align 8
  %30 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %29, i32 0, i32 0
  %31 = load i32, i32* %30, align 8
  %32 = load %struct.TYPE_2__*, %struct.TYPE_2__** %5, align 8
  %33 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %32, i32 0, i32 1
  %34 = load i32, i32* %33, align 4
  %35 = add nsw i32 %31, %34
  %36 = shl i32 1, %35
  store i32 %36, i32* %6, align 4
  %37 = load i32, i32* %6, align 4
  %38 = load %struct.resampler_data*, %struct.resampler_data** %4, align 8
  %39 = getelementptr inbounds %struct.resampler_data, %struct.resampler_data* %38, i32 0, i32 0
  %40 = load i32, i32* %39, align 8
  %41 = udiv i32 %37, %40
  store i32 %41, i32* %7, align 4
  %42 = load %struct.resampler_data*, %struct.resampler_data** %4, align 8
  %43 = getelementptr inbounds %struct.resampler_data, %struct.resampler_data* %42, i32 0, i32 1
  %44 = load float*, float** %43, align 8
  store float* %44, float** %8, align 8
  %45 = load %struct.resampler_data*, %struct.resampler_data** %4, align 8
  %46 = getelementptr inbounds %struct.resampler_data, %struct.resampler_data* %45, i32 0, i32 2
  %47 = load float*, float** %46, align 8
  store float* %47, float** %9, align 8
  %48 = load %struct.resampler_data*, %struct.resampler_data** %4, align 8
  %49 = getelementptr inbounds %struct.resampler_data, %struct.resampler_data* %48, i32 0, i32 3
  %50 = load i64, i64* %49, align 8
  store i64 %50, i64* %10, align 8
  store i64 0, i64* %11, align 8
  br label %51

51:                                               ; preds = %298, %2
  %52 = load i64, i64* %10, align 8
  %53 = icmp ne i64 %52, 0
  br i1 %53, label %54, label %299

54:                                               ; preds = %51
  br label %55

55:                                               ; preds = %77, %54
  %56 = load i64, i64* %10, align 8
  %57 = icmp ne i64 %56, 0
  br i1 %57, label %58, label %64

58:                                               ; preds = %55
  %59 = load %struct.TYPE_2__*, %struct.TYPE_2__** %5, align 8
  %60 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %59, i32 0, i32 2
  %61 = load i32, i32* %60, align 8
  %62 = load i32, i32* %6, align 4
  %63 = icmp uge i32 %61, %62
  br label %64

64:                                               ; preds = %58, %55
  %65 = phi i1 [ false, %55 ], [ %63, %58 ]
  br i1 %65, label %66, label %131

66:                                               ; preds = %64
  %67 = load %struct.TYPE_2__*, %struct.TYPE_2__** %5, align 8
  %68 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %67, i32 0, i32 3
  %69 = load i64, i64* %68, align 8
  %70 = icmp ne i64 %69, 0
  br i1 %70, label %77, label %71

71:                                               ; preds = %66
  %72 = load %struct.TYPE_2__*, %struct.TYPE_2__** %5, align 8
  %73 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %72, i32 0, i32 4
  %74 = load i64, i64* %73, align 8
  %75 = load %struct.TYPE_2__*, %struct.TYPE_2__** %5, align 8
  %76 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %75, i32 0, i32 3
  store i64 %74, i64* %76, align 8
  br label %77

77:                                               ; preds = %71, %66
  %78 = load %struct.TYPE_2__*, %struct.TYPE_2__** %5, align 8
  %79 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %78, i32 0, i32 3
  %80 = load i64, i64* %79, align 8
  %81 = add i64 %80, -1
  store i64 %81, i64* %79, align 8
  %82 = load float*, float** %8, align 8
  %83 = getelementptr inbounds float, float* %82, i32 1
  store float* %83, float** %8, align 8
  %84 = load float, float* %82, align 4
  %85 = load %struct.TYPE_2__*, %struct.TYPE_2__** %5, align 8
  %86 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %85, i32 0, i32 5
  %87 = load float*, float** %86, align 8
  %88 = load %struct.TYPE_2__*, %struct.TYPE_2__** %5, align 8
  %89 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %88, i32 0, i32 3
  %90 = load i64, i64* %89, align 8
  %91 = getelementptr inbounds float, float* %87, i64 %90
  store float %84, float* %91, align 4
  %92 = load %struct.TYPE_2__*, %struct.TYPE_2__** %5, align 8
  %93 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %92, i32 0, i32 5
  %94 = load float*, float** %93, align 8
  %95 = load %struct.TYPE_2__*, %struct.TYPE_2__** %5, align 8
  %96 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %95, i32 0, i32 3
  %97 = load i64, i64* %96, align 8
  %98 = load %struct.TYPE_2__*, %struct.TYPE_2__** %5, align 8
  %99 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %98, i32 0, i32 4
  %100 = load i64, i64* %99, align 8
  %101 = add i64 %97, %100
  %102 = getelementptr inbounds float, float* %94, i64 %101
  store float %84, float* %102, align 4
  %103 = load float*, float** %8, align 8
  %104 = getelementptr inbounds float, float* %103, i32 1
  store float* %104, float** %8, align 8
  %105 = load float, float* %103, align 4
  %106 = load %struct.TYPE_2__*, %struct.TYPE_2__** %5, align 8
  %107 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %106, i32 0, i32 6
  %108 = load float*, float** %107, align 8
  %109 = load %struct.TYPE_2__*, %struct.TYPE_2__** %5, align 8
  %110 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %109, i32 0, i32 3
  %111 = load i64, i64* %110, align 8
  %112 = getelementptr inbounds float, float* %108, i64 %111
  store float %105, float* %112, align 4
  %113 = load %struct.TYPE_2__*, %struct.TYPE_2__** %5, align 8
  %114 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %113, i32 0, i32 6
  %115 = load float*, float** %114, align 8
  %116 = load %struct.TYPE_2__*, %struct.TYPE_2__** %5, align 8
  %117 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %116, i32 0, i32 3
  %118 = load i64, i64* %117, align 8
  %119 = load %struct.TYPE_2__*, %struct.TYPE_2__** %5, align 8
  %120 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %119, i32 0, i32 4
  %121 = load i64, i64* %120, align 8
  %122 = add i64 %118, %121
  %123 = getelementptr inbounds float, float* %115, i64 %122
  store float %105, float* %123, align 4
  %124 = load i32, i32* %6, align 4
  %125 = load %struct.TYPE_2__*, %struct.TYPE_2__** %5, align 8
  %126 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %125, i32 0, i32 2
  %127 = load i32, i32* %126, align 8
  %128 = sub i32 %127, %124
  store i32 %128, i32* %126, align 8
  %129 = load i64, i64* %10, align 8
  %130 = add i64 %129, -1
  store i64 %130, i64* %10, align 8
  br label %55

131:                                              ; preds = %64
  br label %132

132:                                              ; preds = %263, %131
  %133 = load %struct.TYPE_2__*, %struct.TYPE_2__** %5, align 8
  %134 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %133, i32 0, i32 2
  %135 = load i32, i32* %134, align 8
  %136 = load i32, i32* %6, align 4
  %137 = icmp ult i32 %135, %136
  br i1 %137, label %138, label %298

138:                                              ; preds = %132
  store float* null, float** %17, align 8
  store float* null, float** %18, align 8
  %139 = load %struct.TYPE_2__*, %struct.TYPE_2__** %5, align 8
  %140 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %139, i32 0, i32 5
  %141 = load float*, float** %140, align 8
  %142 = load %struct.TYPE_2__*, %struct.TYPE_2__** %5, align 8
  %143 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %142, i32 0, i32 3
  %144 = load i64, i64* %143, align 8
  %145 = getelementptr inbounds float, float* %141, i64 %144
  store float* %145, float** %19, align 8
  %146 = load %struct.TYPE_2__*, %struct.TYPE_2__** %5, align 8
  %147 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %146, i32 0, i32 6
  %148 = load float*, float** %147, align 8
  %149 = load %struct.TYPE_2__*, %struct.TYPE_2__** %5, align 8
  %150 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %149, i32 0, i32 3
  %151 = load i64, i64* %150, align 8
  %152 = getelementptr inbounds float, float* %148, i64 %151
  store float* %152, float** %20, align 8
  %153 = load %struct.TYPE_2__*, %struct.TYPE_2__** %5, align 8
  %154 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %153, i32 0, i32 4
  %155 = load i64, i64* %154, align 8
  %156 = trunc i64 %155 to i32
  store i32 %156, i32* %21, align 4
  %157 = load %struct.TYPE_2__*, %struct.TYPE_2__** %5, align 8
  %158 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %157, i32 0, i32 2
  %159 = load i32, i32* %158, align 8
  %160 = load %struct.TYPE_2__*, %struct.TYPE_2__** %5, align 8
  %161 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %160, i32 0, i32 1
  %162 = load i32, i32* %161, align 4
  %163 = lshr i32 %159, %162
  store i32 %163, i32* %22, align 4
  %164 = load %struct.TYPE_2__*, %struct.TYPE_2__** %5, align 8
  %165 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %164, i32 0, i32 7
  %166 = load i64, i64* %165, align 8
  %167 = load i64, i64* @SINC_WINDOW_KAISER, align 8
  %168 = icmp eq i64 %166, %167
  br i1 %168, label %169, label %196

169:                                              ; preds = %138
  %170 = load %struct.TYPE_2__*, %struct.TYPE_2__** %5, align 8
  %171 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %170, i32 0, i32 8
  %172 = load float*, float** %171, align 8
  %173 = load i32, i32* %22, align 4
  %174 = load i32, i32* %21, align 4
  %175 = mul i32 %173, %174
  %176 = mul i32 %175, 2
  %177 = zext i32 %176 to i64
  %178 = getelementptr inbounds float, float* %172, i64 %177
  store float* %178, float** %17, align 8
  %179 = load float*, float** %17, align 8
  %180 = load i32, i32* %21, align 4
  %181 = zext i32 %180 to i64
  %182 = getelementptr inbounds float, float* %179, i64 %181
  store float* %182, float** %18, align 8
  %183 = load %struct.TYPE_2__*, %struct.TYPE_2__** %5, align 8
  %184 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %183, i32 0, i32 2
  %185 = load i32, i32* %184, align 8
  %186 = load %struct.TYPE_2__*, %struct.TYPE_2__** %5, align 8
  %187 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %186, i32 0, i32 9
  %188 = load i32, i32* %187, align 8
  %189 = and i32 %185, %188
  %190 = uitofp i32 %189 to float
  %191 = load %struct.TYPE_2__*, %struct.TYPE_2__** %5, align 8
  %192 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %191, i32 0, i32 10
  %193 = load float, float* %192, align 4
  %194 = fmul float %190, %193
  %195 = call i32 @_mm_set1_ps(float %194)
  store i32 %195, i32* %16, align 4
  br label %205

196:                                              ; preds = %138
  %197 = load %struct.TYPE_2__*, %struct.TYPE_2__** %5, align 8
  %198 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %197, i32 0, i32 8
  %199 = load float*, float** %198, align 8
  %200 = load i32, i32* %22, align 4
  %201 = load i32, i32* %21, align 4
  %202 = mul i32 %200, %201
  %203 = zext i32 %202 to i64
  %204 = getelementptr inbounds float, float* %199, i64 %203
  store float* %204, float** %17, align 8
  br label %205

205:                                              ; preds = %196, %169
  %206 = call i32 (...) @_mm_setzero_ps()
  store i32 %206, i32* %14, align 4
  %207 = call i32 (...) @_mm_setzero_ps()
  store i32 %207, i32* %15, align 4
  store i32 0, i32* %12, align 4
  br label %208

208:                                              ; preds = %260, %205
  %209 = load i32, i32* %12, align 4
  %210 = load i32, i32* %21, align 4
  %211 = icmp ult i32 %209, %210
  br i1 %211, label %212, label %263

212:                                              ; preds = %208
  %213 = load float*, float** %19, align 8
  %214 = load i32, i32* %12, align 4
  %215 = zext i32 %214 to i64
  %216 = getelementptr inbounds float, float* %213, i64 %215
  %217 = call i32 @_mm_loadu_ps(float* %216)
  store i32 %217, i32* %25, align 4
  %218 = load float*, float** %20, align 8
  %219 = load i32, i32* %12, align 4
  %220 = zext i32 %219 to i64
  %221 = getelementptr inbounds float, float* %218, i64 %220
  %222 = call i32 @_mm_loadu_ps(float* %221)
  store i32 %222, i32* %26, align 4
  %223 = load %struct.TYPE_2__*, %struct.TYPE_2__** %5, align 8
  %224 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %223, i32 0, i32 7
  %225 = load i64, i64* %224, align 8
  %226 = load i64, i64* @SINC_WINDOW_KAISER, align 8
  %227 = icmp eq i64 %225, %226
  br i1 %227, label %228, label %243

228:                                              ; preds = %212
  %229 = load float*, float** %18, align 8
  %230 = load i32, i32* %12, align 4
  %231 = zext i32 %230 to i64
  %232 = getelementptr inbounds float, float* %229, i64 %231
  %233 = call i32 @_mm_load_ps(float* %232)
  store i32 %233, i32* %23, align 4
  %234 = load float*, float** %17, align 8
  %235 = load i32, i32* %12, align 4
  %236 = zext i32 %235 to i64
  %237 = getelementptr inbounds float, float* %234, i64 %236
  %238 = call i32 @_mm_load_ps(float* %237)
  %239 = load i32, i32* %23, align 4
  %240 = load i32, i32* %16, align 4
  %241 = call i32 @_mm_mul_ps(i32 %239, i32 %240)
  %242 = call i32 @_mm_add_ps(i32 %238, i32 %241)
  store i32 %242, i32* %24, align 4
  br label %249

243:                                              ; preds = %212
  %244 = load float*, float** %17, align 8
  %245 = load i32, i32* %12, align 4
  %246 = zext i32 %245 to i64
  %247 = getelementptr inbounds float, float* %244, i64 %246
  %248 = call i32 @_mm_load_ps(float* %247)
  store i32 %248, i32* %24, align 4
  br label %249

249:                                              ; preds = %243, %228
  %250 = load i32, i32* %14, align 4
  %251 = load i32, i32* %25, align 4
  %252 = load i32, i32* %24, align 4
  %253 = call i32 @_mm_mul_ps(i32 %251, i32 %252)
  %254 = call i32 @_mm_add_ps(i32 %250, i32 %253)
  store i32 %254, i32* %14, align 4
  %255 = load i32, i32* %15, align 4
  %256 = load i32, i32* %26, align 4
  %257 = load i32, i32* %24, align 4
  %258 = call i32 @_mm_mul_ps(i32 %256, i32 %257)
  %259 = call i32 @_mm_add_ps(i32 %255, i32 %258)
  store i32 %259, i32* %15, align 4
  br label %260

260:                                              ; preds = %249
  %261 = load i32, i32* %12, align 4
  %262 = add i32 %261, 4
  store i32 %262, i32* %12, align 4
  br label %208

263:                                              ; preds = %208
  %264 = load i32, i32* %14, align 4
  %265 = load i32, i32* %15, align 4
  %266 = call i32 @_MM_SHUFFLE(i32 1, i32 0, i32 1, i32 0)
  %267 = call i32 @_mm_shuffle_ps(i32 %264, i32 %265, i32 %266)
  %268 = load i32, i32* %14, align 4
  %269 = load i32, i32* %15, align 4
  %270 = call i32 @_MM_SHUFFLE(i32 3, i32 2, i32 3, i32 2)
  %271 = call i32 @_mm_shuffle_ps(i32 %268, i32 %269, i32 %270)
  %272 = call i32 @_mm_add_ps(i32 %267, i32 %271)
  store i32 %272, i32* %13, align 4
  %273 = load i32, i32* %13, align 4
  %274 = load i32, i32* %13, align 4
  %275 = call i32 @_MM_SHUFFLE(i32 3, i32 3, i32 1, i32 1)
  %276 = call i32 @_mm_shuffle_ps(i32 %273, i32 %274, i32 %275)
  %277 = load i32, i32* %13, align 4
  %278 = call i32 @_mm_add_ps(i32 %276, i32 %277)
  store i32 %278, i32* %13, align 4
  %279 = load float*, float** %9, align 8
  %280 = getelementptr inbounds float, float* %279, i64 0
  %281 = load i32, i32* %13, align 4
  %282 = call i32 @_mm_store_ss(float* %280, i32 %281)
  %283 = load float*, float** %9, align 8
  %284 = getelementptr inbounds float, float* %283, i64 1
  %285 = load i32, i32* %13, align 4
  %286 = load i32, i32* %13, align 4
  %287 = call i32 @_mm_movehl_ps(i32 %285, i32 %286)
  %288 = call i32 @_mm_store_ss(float* %284, i32 %287)
  %289 = load float*, float** %9, align 8
  %290 = getelementptr inbounds float, float* %289, i64 2
  store float* %290, float** %9, align 8
  %291 = load i64, i64* %11, align 8
  %292 = add i64 %291, 1
  store i64 %292, i64* %11, align 8
  %293 = load i32, i32* %7, align 4
  %294 = load %struct.TYPE_2__*, %struct.TYPE_2__** %5, align 8
  %295 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %294, i32 0, i32 2
  %296 = load i32, i32* %295, align 8
  %297 = add i32 %296, %293
  store i32 %297, i32* %295, align 8
  br label %132

298:                                              ; preds = %132
  br label %51

299:                                              ; preds = %51
  %300 = load i64, i64* %11, align 8
  %301 = load %struct.resampler_data*, %struct.resampler_data** %4, align 8
  %302 = getelementptr inbounds %struct.resampler_data, %struct.resampler_data* %301, i32 0, i32 4
  store i64 %300, i64* %302, align 8
  ret void
}

declare dso_local i32 @_mm_set1_ps(float) #1

declare dso_local i32 @_mm_setzero_ps(...) #1

declare dso_local i32 @_mm_loadu_ps(float*) #1

declare dso_local i32 @_mm_load_ps(float*) #1

declare dso_local i32 @_mm_add_ps(i32, i32) #1

declare dso_local i32 @_mm_mul_ps(i32, i32) #1

declare dso_local i32 @_mm_shuffle_ps(i32, i32, i32) #1

declare dso_local i32 @_MM_SHUFFLE(i32, i32, i32, i32) #1

declare dso_local i32 @_mm_store_ss(float*, i32) #1

declare dso_local i32 @_mm_movehl_ps(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
